<resources>
    <string name="app_name">Vividly</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Chats">Chats</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <!-- ERROR RESOLVED <string name="login">Login</string> -->
    <string name="logout">Logout</string>
    <string name="user_name">user name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
</resources>