<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="50dp"
                android:text="@string/welcome"
                android:textColor="@android:color/background_dark"
                android:textSize="35sp"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/welcome_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_rounded_square"
                android:text="@string/register"
                android:textColor="@android:color/black">

            </Button>

            <Button
                android:id="@+id/welcome_login_button"
                android:layout_width="wrap_content"
                android:layout_alignStart="@+id/welcome_register_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/welcome_register_button"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#99a7b3c6"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.5"
                android:text="@string/login"
                android:textColor="@android:color/white"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="379dp">

            </Button>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>